ports/espressif/boards/adafruit_magtag_2.9_grayscale/board.c
@@ -217,75 +217,54 @@ void board_init(void) {
     display->base.type = &epaperdisplay_epaperdisplay_type;
 
     if (is_ssd1680) {
-        common_hal_epaperdisplay_epaperdisplay_construct(
-            display,
-            bus,
-            ssd1680_display_start_sequence, sizeof(ssd1680_display_start_sequence),
-            0, // start up time
-            ssd1680_display_stop_sequence, sizeof(ssd1680_display_stop_sequence),
-            296,  // width
-            128,  // height
-            250,  // ram_width
-            296,  // ram_height
-            0,  // colstart
-            0,  // rowstart
-            270,  // rotation
-            0x44,  // set_column_window_command
-            0x45,  // set_row_window_command
-            0x4e,  // set_current_column_command
-            0x4f,  // set_current_row_command
-            0x24,  // write_black_ram_command
-            false,  // black_bits_inverted
-            0x26,  // write_color_ram_command
-            false,  // color_bits_inverted
-            0x000000,  // highlight_color
-            0x000000,  // highlight_color2
-            ssd1680_display_refresh_sequence, sizeof(ssd1680_display_refresh_sequence),
-            1.0,  // refresh_time
-            &pin_GPIO5,  // busy_pin
-            true,  // busy_state
-            5.0, // seconds_per_frame
-            false,  // always_toggle_chip_select
-            true, // grayscale
-            false, // acep
-            false, // spectra6
-            true,  // two_byte_sequence_length
-            true); // address_little_endian
+        epaperdisplay_construct_args_t args = EPAPERDISPLAY_CONSTRUCT_ARGS_DEFAULTS;
+        args.bus = bus;
+        args.start_sequence = ssd1680_display_start_sequence;
+        args.start_sequence_len = sizeof(ssd1680_display_start_sequence);
+        args.stop_sequence = ssd1680_display_stop_sequence;
+        args.stop_sequence_len = sizeof(ssd1680_display_stop_sequence);
+        args.width = 296;
+        args.height = 128;
+        args.ram_width = 250;
+        args.ram_height = 296;
+        args.rotation = 270;
+        args.set_column_window_command = 0x44;
+        args.set_row_window_command = 0x45;
+        args.set_current_column_command = 0x4e;
+        args.set_current_row_command = 0x4f;
+        args.write_black_ram_command = 0x24;
+        args.write_color_ram_command = 0x26;
+        args.refresh_sequence = ssd1680_display_refresh_sequence;
+        args.refresh_sequence_len = sizeof(ssd1680_display_refresh_sequence);
+        args.refresh_time = 1.0;
+        args.busy_pin = &pin_GPIO5;
+        args.busy_state = true;
+        args.seconds_per_frame = 5.0;
+        args.grayscale = true;
+        args.two_byte_sequence_length = true;
+        args.address_little_endian = true;
+        common_hal_epaperdisplay_epaperdisplay_construct(display, &args);
     } else {
-        common_hal_epaperdisplay_epaperdisplay_construct(
-            display,
-            bus,
-            il0373_display_start_sequence, sizeof(il0373_display_start_sequence),
-            0, // start up time
-            il0373_display_stop_sequence, sizeof(il0373_display_stop_sequence),
-            296,  // width
-            128,  // height
-            160,  // ram_width
-            296,  // ram_height
-            0,  // colstart
-            0,  // rowstart
-            270,  // rotation
-            NO_COMMAND,  // set_column_window_command
-            NO_COMMAND,  // set_row_window_command
-            NO_COMMAND,  // set_current_column_command
-            NO_COMMAND,  // set_current_row_command
-            0x10,  // write_black_ram_command
-            false,  // black_bits_inverted
-            0x13,  // write_color_ram_command
-            false,  // color_bits_inverted
-            0x000000,  // highlight_color
-            0x000000,  // highlight_color2
-            il0373_display_refresh_sequence, sizeof(il0373_display_refresh_sequence),
-            1.0,  // refresh_time
-            &pin_GPIO5,  // busy_pin
-            false,  // busy_state
-            5.0, // seconds_per_frame
-            false,  // always_toggle_chip_select
-            true, // grayscale
-            false, // acep
-            false, // spectra6
-            false,  // two_byte_sequence_length
-            false); // address_little_endian
+        epaperdisplay_construct_args_t args = EPAPERDISPLAY_CONSTRUCT_ARGS_DEFAULTS;
+        args.bus = bus;
+        args.start_sequence = il0373_display_start_sequence;
+        args.start_sequence_len = sizeof(il0373_display_start_sequence);
+        args.stop_sequence = il0373_display_stop_sequence;
+        args.stop_sequence_len = sizeof(il0373_display_stop_sequence);
+        args.width = 296;
+        args.height = 128;
+        args.ram_width = 160;
+        args.ram_height = 296;
+        args.rotation = 270;
+        args.write_black_ram_command = 0x10;
+        args.write_color_ram_command = 0x13;
+        args.refresh_sequence = il0373_display_refresh_sequence;
+        args.refresh_sequence_len = sizeof(il0373_display_refresh_sequence);
+        args.refresh_time = 1.0;
+        args.busy_pin = &pin_GPIO5;
+        args.seconds_per_frame = 5.0;
+        args.grayscale = true;
+        common_hal_epaperdisplay_epaperdisplay_construct(display, &args);
     }
 }
 
